# mtg_card_reader

./: .gitignore
prototype/: CMakeLists.txt
prototype/include/: card_reader.hpp
prototype/source/: card_reader.cpp  main.cpp
